--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@angular/common": "~12.0.1",
     "@angular/compiler": "~12.0.1",
     "@angular/core": "~12.0.1",
-    "@angular/fire": "^6.1.4",
+    "@angular/fire": "^6.1.5",
     "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.0.1",
     "@angular/material": "~12.0.1",
@@ -43,7 +43,7 @@
     "ngx-auth-firebaseui": "^5.3.0",
     "proxy-polyfill": "^0.3.2",
     "rxjs": "^6.6.7",
-    "tslib": "^2.0.0",
+    "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -54,29 +54,31 @@
     "@angular/cli": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
     "@angular/language-service": "~12.0.1",
+    "@babel/core": "^7.13.0",
     "@schuchard/prettier": "^5.0.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "^2.0.8",
+    "@types/jasmine": "^3.7.4",
+    "@types/jasminewd2": "^2.0.9",
     "@types/node": "^14.14.37",
-    "codelyzer": "^6.0.1",
+    "codelyzer": "^6.0.2",
     "firebase-tools": "^9.11.0",
     "husky": "^4.3.8",
     "jasmine-core": "^3.7.1",
-    "jasmine-spec-reporter": "^6.0.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "^4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "lint-staged": "^10.5.4",
+    "karma-jasmine-html-reporter": "^1.6.0",
+    "lint-staged": "^11.0.0",
     "minimatch": "^3.0.4",
     "npm-check": "^5.9.2",
-    "prettier": "2.2.1",
+    "prettier": "^2.3.0",
     "protractor": "~7.0.0",
-    "rxjs-tslint-rules": "^4.34.7",
+    "postcss": "^8.2.15",
+    "rxjs-tslint-rules": "^4.34.8",
     "source-map-explorer": "^2.5.2",
-    "stylelint": "^13.12.0",
+    "stylelint": "^13.13.1",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
